# tennis-ml

./: .cruft.json  .gitignore  .pre-commit-config.yaml  AGENTS.md  PLANNING.md  README.md  bentofile.yaml  justfile  pyproject.toml
.github/workflows/: ci.yml  dependency-review.yml  labels.yml  pre-commit_autoupdate.yml
data/: tennis.duckdb
infra/clickhouse/: init.sql  seed.sql
infra/duckdb/: init.sql  run_init.py  seed.sql
infra/k3d/: config.yaml  loki-overrides.yaml  machine-id  prometheus-overrides.yaml  start.sh
infra/manifests/default/: clickhouse.yaml  config-map.yaml  ingress.yaml  mlflow.yaml  prefect-server.yaml  prefect-worker.yaml
infra/manifests/deploy/: Dockerfile  bentoml.yaml  dashboard.yaml  ingress.yaml
infra/manifests/monitoring/: ingress.yaml
notebooks/eda/: 00_eda.ipynb  01_player_similarity.ipynb
notebooks/parameters/: 01_feature_engineering.ipynb  02_tune_gbdt.ipynb  02_tune_linear.ipynb  02_tune_nn.ipynb  03_pick_best.ipynb  04_stack_ensemble.ipynb  05_evaluate.ipynb
src/: __init__.py
src/dashboard/: app.py
src/db/: client.py
src/features/: build.py  rolling.py  validate.py
src/flows/: etl.py  ingest.py  pipeline.py  training.py
src/models/: similarity.py
src/serving/: service.py
