[project]
name = "tennis-ml"
version = "0.1.0"
description = "ML showcase off a full E2E production-grade model for predicting tennis match winners"
requires-python = ">=3.13"
readme = "README.md"

dependencies = []

[project.urls]
documentation = "https://swang62.github.io/tennis-ml"
repository = "https://github.com/swang62/tennis-ml"


[dependency-groups]
dev = [
    "pre-commit>=4.6.0",        # Code linting and formatting
    "pytest>=9.0.3",            # Testing framework
    "pytest-cookies>=0.7.0",
    "pytest-cov>=7.1.0",
    "cruft[pyproject]>=2.16.0", # Automated Cookiecutter template synchronization
]

#

[tool.uv]
package = false
default-groups = [
    "dev",
    #
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.coverage.paths]
source = ["src/"]

[tool.coverage.run]
source = ["src"]
omit = ["**/__init__.py"]
